force-app/main/default/objects/smagicinteract__Filter_Setting__c/smagicinteract__Filter_Setting__c.object-meta.xml
<CustomObject>
    <label>Filter Setting</label>
    <nameField>
        <label>Filter Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>