force-app/main/default/objects/smagicinteract__Filter_Setting__c/fields/smagicinteract__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field_Name__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>