force-app/main/default/objects/smagicinteract__Filter_Setting__c/fields/smagicinteract__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field_Value__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>