force-app/main/default/objects/smagicinteract__Filter_Setting__c/fields/smagicinteract__List_View_Configuration__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__List_View_Configuration__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>List View Configuration</label>
    <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
    <relationshipLabel>Filter Settings</relationshipLabel>
    <relationshipName>Filter_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>