force-app/main/default/objects/smagicinteract__Filter_Setting__c/fields/smagicinteract__Operator__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Operator__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Operator</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>