force-app/main/default/objects/smagicinteract__Filter_Setting__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>smagicinteract__List_View_Configuration__c</columns>
    <columns>NAME</columns>
    <columns>smagicinteract__Field_Name__c</columns>
    <columns>smagicinteract__Field_Value__c</columns>
    <columns>smagicinteract__Operator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>